change in pug file for titles

--- a/views/base.pug
+++ b/views/base.pug
@@ -2,7 +2,7 @@
 doctype html
 html
   head
-    title Harry Dance Academy
+    title Mann Dance Academy
     block scripts
     block style 
   body
