--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,7 @@ block style
 block content
     
     section#introSection
-        div Welcome to Harry's Dance Academy
+        div Welcome to Mann's Dance Academy
         div.small Eat Sleep Dance Repeat
 
     section#missionSection
