--- a/views/base.pug
+++ b/views/base.pug
@@ -3,6 +3,7 @@ doctype html
 html
   head
     title Mann Dance Academy
+    link(rel="icon",type = "image/x-icon" href="../static/img/logo.png")
     block scripts
     block style 
   body
@@ -10,7 +11,7 @@ html
         ul
             div#logo
                 img(src="/static/img/logo.png")
-                | HDA
+                | MDA
             li #[a(href="/") Home]
             li #[a(href="/") About]
             li #[a(href="/") Services]
